# JavSP

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cx_freeze.yml
javsp/: __main__.py  config.py  file.py  func.py  lib.py  print.py
javsp/cropper/: slimeface_crop.py
javsp/web/: arzon.py  arzon_iv.py  avsox.py  avwiki.py  dl_getchu.py  fanza.py  fc2.py  fc2fan.py  fc2ppvdb.py  gyutto.py  jav321.py  javbus.py  javdb.py  javmenu.py  mgstage.py  njav.py  prestige.py  proxyfree.py
