[tool.poetry]
name = "javsp"
version = "1.9"
description = "汇总多站点数据的AV元数据刮削器"
authors = ["Yuukiy <76897913+Yuukiy@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}.{distance}"

[tool.poetry.dependencies]
python = "<3.15,>=3.10"
curl_cffi = "^0.15"
colorama = "^0.4.6"
pillow = ">=12.0"
pretty-errors = "1.2.19"
requests = "^2.32"
tqdm = "^4.67"
# https://stackoverflow.com/questions/446209/possible-values-from-sys-platform
pywin32 = {version = "^311", markers = "sys_platform == 'win32'"}
pywin32-ctypes = {version = "^0.2.2", markers = "sys_platform == 'win32'"}
cryptography = "^48.0"
pycryptodome = "^3.20.0"
lxml = {extras = ["html-clean"], version = "^6.0"}
confz = "^2.0.1"
pydantic-extra-types = "^2.9.0"
pendulum = "^3.2.0"


[tool.poetry.group.crop]
optional = true

[tool.poetry.group.crop.dependencies]
slimeface = "^2024.9.27"

[tool.poetry.scripts]
javsp = "javsp.__main__:entry"
server = "javsp.server:entry"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
flake8 = "^7.0.0"
cx-freeze = "^8.5"
types-lxml = "^2026.2"
types-pillow = "^10.2.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
